objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Active_Product__c</fullName>
        <formula>IF(PricebookEntry.Product2.IsActive = TRUE, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualDescription__c</fullName>
        <label>ActualDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Opportunity.Business_Unit__c</formula>
        <inlineHelpText>Automatically pulls from Opp Business Unit.</inlineHelpText>
        <label>Business Unit (Opp)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conquest_Setup_Fees__c</fullName>
        <formula>IF( PricebookEntry.Product2.ProductCode = &quot;CQ Set Up&quot;,TotalPrice, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conquest Setup Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Integration_Fees__c</fullName>
        <formula>IF( PricebookEntry.Product2.ProductCode = &quot;PV Data Int&quot;,TotalPrice, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Integration Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disable_Price_Change__c</fullName>
        <formula>IF(PricebookEntry.Product2.Disable_Price_Change__c ==TRUE, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Price Change</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <description>The amount this line item has been discounted by.</description>
        <formula>IF(
   OR(
      Total_List_Price__c = 0,
      VS_Sale_Price__c &gt; Total_List_Price__c
   ),
   0,
   (VS_Sale_Price__c - Total_List_Price__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpPaidByDealer__c</fullName>
        <formula>IF( PricebookEntry.Product2.ExpPaidByDealer__c , &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExpPaidByDealer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <description>Used by Vin. Workflow calculation used for Target Floors on Opportunity. Do not lock down field access, but DO NOT put on Opp Prod page layout, to prevent changes.</description>
        <label>Floor</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Cost__c</fullName>
        <description>Cost to ship product</description>
        <formula>PricebookEntry.Product2.Freight_Cost__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost to ship product</inlineHelpText>
        <label>Freight Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fulfillment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fulfillment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generated_by_Product_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this product was created by Flow designed to add products</inlineHelpText>
        <label>Generated by Product Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generated_by_Website_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if this product was generated by the Add Website Products flow. Used by a validation rule that governs website creation.</inlineHelpText>
        <label>Generated by Website Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Genius_Labs_Setup_Fees__c</fullName>
        <formula>IF( PricebookEntry.Product2.ProductCode = &quot;GL Set Up&quot;,TotalPrice, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Genius Labs Setup Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goal_Price__c</fullName>
        <formula>(List_Price_Formula__c) * 0.80</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hardware_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hardware Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hardware__c</fullName>
        <formula>IF( PricebookEntry.Product2.Hardware_Product__c  ==TRUE, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hardware</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsBeingCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked, the package product population will not fire off. This is used when the custom clone button is working to ensure no duplicate products are created.</description>
        <label>IsBeingCloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOppClosed__c</fullName>
        <formula>IF(
   Opportunity.IsClosed = True,
   &quot;True&quot;,
   &quot;False&quot;
)</formula>
        <label>IsOppClosed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPackageChild__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only applicable to Monthly items.</description>
        <inlineHelpText>Only applicable to Monthly items.</inlineHelpText>
        <label>IsPackageChild</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTraining_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTraining (Workflow)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTraining__c</fullName>
        <formula>IF( PricebookEntry.Product2.isTraining__c , &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsTraining</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>Legacy ObjectID for Migration Purposes</description>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price_Formula__c</fullName>
        <formula>IF(
   !ISBLANK(Package_Discount_Percentage__c),
   IF(
      IsPackageChild__c &amp;&amp; One_Time_Fee__c = FALSE, 
      (ListPrice*Quantity*Package_Discount_Percentage__c), 
      (ListPrice*Quantity)  
   ),
   IF(
      IsPackageChild__c,
      0,
      (ListPrice*Quantity)
   )
)</formula>
        <inlineHelpText>If PDP is filled in, check to see if IsPackageChild is TRUE and OneTimeFee is FALSE. If so, apply PDP to the List Price. Otherwise, straight List Price.
If PDP is not filled in, check if PackageChild is TRUE. If so, this is 0. If not straight List Price.</inlineHelpText>
        <label>List Price Pkg&apos;d</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <inlineHelpText>enter the make related to this product, required for conquest franchise product</inlineHelpText>
        <label>Make</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bugati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge/Ram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harley Davidson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hummer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Advertising_Budget__c</fullName>
        <label>Monthly Advertising Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Monthly_Created_by_Pkg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by code. Indicates that this OLI is a non-monthly product that was generated by a package.</description>
        <label>Non-Monthly Created by Pkg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Training_Days__c</fullName>
        <formula>PricebookEntry.Product2.Number_of_Training_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula pulling from Number of Training Days on Product</inlineHelpText>
        <label>Number of Training Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLI_Cost_Factor__c</fullName>
        <description>*** ADMIN ONLY ***
List Price x Opportunity Cost Factor x % to Retail (aka the inverse of Recurring Discount Percent)</description>
        <formula>ListPrice * Opportunity.Cost_Factor__c * Opportunity.to_Retail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OLI Cost Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OLI_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OLI ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Time_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Time Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opp_Close_Date__c</fullName>
        <formula>Opportunity.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Product_Suite__c</fullName>
        <formula>TEXT(Opportunity.Opportunity_Names__c)</formula>
        <inlineHelpText>formula field that reads the opportunity product suite</inlineHelpText>
        <label>Opp Product Suite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Related_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check box to override the related product error</inlineHelpText>
        <label>Override Related Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will hold the POA for this product.</description>
        <label>POA</label>
        <referenceTo>POA__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PackageNotForTinderbox__c</fullName>
        <formula>PricebookEntry.Product2.PackageNotForTinderbox__c</formula>
        <label>PackageNotForTinderbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package_Discount_Percentage__c</fullName>
        <label>Package Discount Percentage</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Package_Value__c</fullName>
        <description>Affects nothing. Only used for reference by Tinderbox and sales reps.</description>
        <formula>PricebookEntry.Product2.Package_Value__c</formula>
        <inlineHelpText>Affects nothing. Only used for reference by Tinderbox and sales reps.</inlineHelpText>
        <label>Package Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pass_Thru_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pass Thru Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phased_Implementation_Product__c</fullName>
        <formula>IF(PricebookEntry.Product2.Phased_Implementation_Product__c ==TRUE, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phased Implementation Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book_ID__c</fullName>
        <formula>Opportunity.Pricebook2Id</formula>
        <label>Price Book ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_HTML__c</fullName>
        <formula>&apos;&lt;tr&gt;&lt;td&gt;&apos; &amp; PricebookEntry.Product2.Name &amp; &apos;&lt;/td&gt;&lt;td&gt;&apos; &amp; 
IF( ISNULL( PricebookEntry.Product2.Description ) , &apos;&apos;, PricebookEntry.Product2.Description) &amp; 
&apos;&lt;/td&gt;&lt;td&gt;&apos; &amp; TEXT(Quantity) &amp; &apos;&lt;/td&gt;&lt;td&gt;$&apos; &amp; 
IF(TotalPrice/Quantity &gt;= 1000000, TEXT(FLOOR(TotalPrice/Quantity / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
IF(TotalPrice/Quantity &gt;= 1000, RIGHT(TEXT(FLOOR(TotalPrice/Quantity / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(TotalPrice/Quantity)), 3) &amp; &quot;.&quot; &amp; 
IF(MOD(TotalPrice/Quantity , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(TotalPrice/Quantity , 1), 2) * 100), TEXT(MIN(ROUND(MOD(TotalPrice/Quantity , 1), 2) * 100, 99))) &amp; 
&apos;&lt;/td&gt;&lt;td&gt;$&apos; &amp; 
IF(TotalPrice&gt;= 1000000, TEXT(FLOOR(TotalPrice/ 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
IF(TotalPrice&gt;= 1000, RIGHT(TEXT(FLOOR(TotalPrice/ 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(TotalPrice)), 3) &amp; &quot;.&quot; &amp; 
IF(MOD(TotalPrice, 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(TotalPrice, 1), 2) * 100), TEXT(MIN(ROUND(MOD(TotalPrice, 1), 2) * 100, 99))) &amp; 
&apos;&lt;/td&gt;&lt;/tr&gt;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing HTML</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProdProj_Default_Owner__c</fullName>
        <formula>PricebookEntry.Product2.ProdProj_Default_Owner__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProdProj Default Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProdProj_Dept2_Owner__c</fullName>
        <formula>PricebookEntry.Product2.ProdProj_Dept2_OwnerID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProdProj Dept2 Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProdProj_Dept3_Owner__c</fullName>
        <formula>PricebookEntry.Product2.ProdProj_Dept3_OwnerID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProdProj Dept3 Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <formula>PricebookEntry.Product2.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductDescription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <formula>PricebookEntry.Product2.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductIsParent__c</fullName>
        <formula>if(PricebookEntry.Product2.IsPackageParent__c, &quot;T&quot;, &quot;F&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductIsParent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Only required for Conquest Franchise</inlineHelpText>
        <label>Product Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Cost_Factor__c</fullName>
        <description>*** ADMIN ONLY ***
Cost Factor rolled over from the related Product</description>
        <formula>PricebookEntry.Product2.Cost_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Cost Factor</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Family_Workflow__c</fullName>
        <description>A copy of Product Family, but populated by Workflow on Opp Prod creation. Necessary for Rollup Summaries, because Rollups cannot refer to Formula fields in criteria. Cannot use OR logic in Rollup Summaries either.</description>
        <label>Product Family (Workflow)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Family)</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Issue2__c</fullName>
        <formula>PricebookEntry.Product2.Production_Issue2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Issue2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Issue3__c</fullName>
        <formula>PricebookEntry.Product2.Production_Issue3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Issue3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Issue__c</fullName>
        <formula>PricebookEntry.Product2.Production_Issue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Issue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_MRR__c</fullName>
        <description>Repeats the Total Price ONLY if the product is monthly recurring revenue.</description>
        <formula>IF(
   CONTAINS(Product_Family__c, &quot;Monthly&quot;), 
   TotalPrice,
   0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Repeats the Total Price ONLY if the product is monthly recurring revenue.</inlineHelpText>
        <label>Product MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_NameWF__c</fullName>
        <description>Set by workflow. This is necessary, as opposed to a formula, because of a Flow bug which does not allow Products to be referenced through formula fields without crashing.</description>
        <label>Product Name (Workflow)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Used by Flow, reports, and workflow that needs to access the Product Name without diving down another layer or two just to get it.</description>
        <formula>PricebookEntry.Product2.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Separation__c</fullName>
        <description>SHOULD be ProJECT Separation despite the API name</description>
        <formula>PricebookEntry.Product2.Project_Separation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Separation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sort_Order__c</fullName>
        <formula>if( One_Time_Fee__c =TRUE||Setup_Fee__c =TRUE|| Fulfillment__c =TRUE, 2, if( Hardware_Product__c =TRUE, 3, if( Solution_Product__c = TRUE, 1, 4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Suite__c</fullName>
        <description>Pushed up from Product&apos;s field &quot;Product Suite&quot; by Workflow. Necessary to use Workflow because cannot use formula field for Rollup Summaries.</description>
        <inlineHelpText>Pushed up from Product&apos;s field &quot;Product Suite&quot; by Workflow.</inlineHelpText>
        <label>Product Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Department2__c</fullName>
        <formula>CASE(PricebookEntry.Product2.Production_Department2__c,
&quot;Creative&quot;,&quot;012700000005e2z&quot;,
&quot;DDM&quot;,&quot;012700000005e3J&quot;,
&quot;Implementation&quot;,&quot;012700000005e34&quot;,
&quot;Integration&quot;,&quot;012700000005e3O&quot;,
&quot;Shipping&quot;,&quot;012700000005e3E&quot;,
&quot;Support&quot;,&quot;012700000005e3T&quot;,
&quot;Training&quot;,&quot;012700000005e39&quot;,
&quot;Training - Sales&quot;,&quot;012700000005ebs&quot;,
&quot;Training - Purchasing&quot;,&quot;012700000005ebn&quot;,
&quot;Implementation Hardware&quot;, &quot;012700000005eOt&quot;,
&quot;Implementation Click to Chat&quot;, &quot;012700000005eOy&quot;,
&quot;Support - Custom Form Design&quot;, &quot;012700000005ejj&quot;,
&quot;Implementation - VinVideos&quot;, &quot;01270000000Q3VI&quot;, 
&quot;700 Credit&quot;,&quot;01270000000Q3eo&quot;,
&quot;AIS Rebates&quot;,&quot;01270000000Q3hd&quot;,
&quot;Craigslist Manual&quot;,&quot;01270000000Q3rn&quot;,
&quot;Desking Module&quot;,&quot;01270000000Q3rh&quot;,
&quot;Inventory Gallery&quot;,&quot;01270000000Q3rm&quot;,
&quot;Inventory Module&quot;,&quot;01270000000Q3rv&quot;,
&quot;KnowMe&quot;,&quot;01270000000Q3rg&quot;,
&quot;Market Pricing Tool&quot;,&quot;01270000000Q3rw&quot;,
&quot;Training (WebEx/Internet)&quot;,&quot;01270000000Q3rl&quot;,
&quot;012700000005e2u&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Department2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Department3__c</fullName>
        <formula>CASE(PricebookEntry.Product2.Production_Department3__c,
&quot;Creative&quot;,&quot;012700000005e2z&quot;,
&quot;DDM&quot;,&quot;012700000005e3J&quot;,
&quot;Implementation&quot;,&quot;012700000005e34&quot;,
&quot;Integration&quot;,&quot;012700000005e3O&quot;,
&quot;Shipping&quot;,&quot;012700000005e3E&quot;,
&quot;Support&quot;,&quot;012700000005e3T&quot;,
&quot;Training&quot;,&quot;012700000005e39&quot;,
&quot;Training - Sales&quot;,&quot;012700000005ebs&quot;,
&quot;Training - Purchasing&quot;,&quot;012700000005ebn&quot;,
&quot;Implementation Hardware&quot;, &quot;012700000005eOt&quot;,
&quot;Implementation Click to Chat&quot;, &quot;012700000005eOy&quot;,
&quot;Support - Custom Form Design&quot;, &quot;012700000005ejj&quot;,
&quot;Implementation - VinVideos&quot;, &quot;01270000000Q3VI&quot;, 
&quot;700 Credit&quot;,&quot;01270000000Q3eo&quot;,
&quot;AIS Rebates&quot;,&quot;01270000000Q3hd&quot;,
&quot;Craigslist Manual&quot;,&quot;01270000000Q3rn&quot;,
&quot;Desking Module&quot;,&quot;01270000000Q3rh&quot;,
&quot;Inventory Gallery&quot;,&quot;01270000000Q3rm&quot;,
&quot;Inventory Module&quot;,&quot;01270000000Q3rv&quot;,
&quot;KnowMe&quot;,&quot;01270000000Q3rg&quot;,
&quot;Market Pricing Tool&quot;,&quot;01270000000Q3rw&quot;,
&quot;Training (WebEx/Internet)&quot;,&quot;01270000000Q3rl&quot;,
&quot;012700000005e2u&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Department3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Department__c</fullName>
        <description>Selects the proper Department page layout for created issues</description>
        <formula>CASE(PricebookEntry.Product2.Production_Department__c, 
&quot;Creative&quot;,&quot;012700000005e2z&quot;,
&quot;DDM&quot;,&quot;012700000005e3J&quot;,
&quot;Implementation&quot;,&quot;012700000005e34&quot;,
&quot;Integration&quot;,&quot;012700000005e3O&quot;,
&quot;Shipping&quot;,&quot;012700000005e3E&quot;,
&quot;Support&quot;,&quot;012700000005e3T&quot;,
&quot;Training&quot;,&quot;012700000005e39&quot;,
&quot;Training - Sales&quot;,&quot;012700000005ebs&quot;,
&quot;Training - Purchasing&quot;,&quot;012700000005ebn&quot;,
&quot;Implementation Hardware&quot;, &quot;012700000005eOt&quot;,
&quot;Implementation Click to Chat&quot;, &quot;012700000005eOy&quot;,
&quot;Support - Custom Form Design&quot;, &quot;012700000005ejj&quot;,
&quot;Implementation - VinVideos&quot;, &quot;01270000000Q3VI&quot;,
&quot;700 Credit&quot;,&quot;01270000000Q3eo&quot;,
&quot;AIS Rebates&quot;,&quot;01270000000Q3hd&quot;,
&quot;Craigslist Manual&quot;,&quot;01270000000Q3rn&quot;,
&quot;Desking Module&quot;,&quot;01270000000Q3rh&quot;,
&quot;Inventory Gallery&quot;,&quot;01270000000Q3rm&quot;,
&quot;Inventory Module&quot;,&quot;01270000000Q3rv&quot;,
&quot;KnowMe&quot;,&quot;01270000000Q3rg&quot;,
&quot;Market Pricing Tool&quot;,&quot;01270000000Q3rw&quot;,
&quot;Training (WebEx/Internet)&quot;,&quot;01270000000Q3rl&quot;,
&quot;012700000005e2u&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Definition_Name__c</fullName>
        <formula>PricebookEntry.Product2.Project_Definition__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Definition Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_520_Quote__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Grouping__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Proposal_Grouping__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Sort_Order__c</fullName>
        <formula>PricebookEntry.Product2.Proposal_Sort_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Sort Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provision_Setup_Fees__c</fullName>
        <formula>IF( PricebookEntry.Product2.ProductCode  = &quot;PV SetUp&quot;,TotalPrice, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provision Setup Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity_Exception__c</fullName>
        <formula>IF( PricebookEntry.Product2.Quantity_Exception__c , &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Exception</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCI_Setup_Fees__c</fullName>
        <formula>IF( PricebookEntry.Product2.ProductCode = &quot;PV RCI SU&quot;,TotalPrice, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCI Setup Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_ProductId__c</fullName>
        <formula>PricebookEntry.Product2.Related_Product__r.Id</formula>
        <label>Related ProductId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setup_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Setup Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this is a major product for Vin. Ensures the generated project is set to the Staged layout.</description>
        <label>Vin Keystone Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Package_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated by code. Indicates what product was added to this opp, that lead to the creation of this opp product.</description>
        <label>Source Package Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StickyOpportunityId__c</fullName>
        <label>StickyOpportunityId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Details__c</fullName>
        <inlineHelpText>Jurisdictions that were applied to the SalesTax Calculation, including name and rate.  Cannot be Edited.</inlineHelpText>
        <label>Sales Tax Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TNOPPST__LineTax__c</fullName>
        <inlineHelpText>Sales Tax Calculated For This Line - Cannot Be Edited</inlineHelpText>
        <label>Sales Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TNOPPST__LineTotal__c</fullName>
        <formula>TotalPrice  +  TNOPPST__LineTax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Rate__c</fullName>
        <inlineHelpText>Tax Rate applied to this line.  Cannot be Edited</inlineHelpText>
        <label>Sales Tax Rate</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Sales_Tax_Rate__c</fullName>
        <label>Sales Tax Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_List_Price_Converted__c</fullName>
        <formula>IF(
   Opportunity.Price_Book_Used__c = &quot;Vin Canada&quot;,
   TotalPrice * Opportunity.CAD_Conversion_Rate__c,
   TotalPrice
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total List Price Converted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>